test/compile_fail/program_declarations_must_be_struct.zig
const shift = @import("shift");

comptime {
    _ = shift.Program(42, struct {
        /// Execute this public body hook.
        pub fn body(_: anytype) anyerror!i32 {
            return 0;
        }
    });
}
